Add update about Oracle JDK versions